--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "csp",
+  "version": "0.0.1",
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
@@ -6,7 +8,10 @@
     "cron": "^1.8.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^12.0.3"
+    "dotenv": "^12.0.3",
+    "got": "^12.0.1",
+    "node-fetch": "^2.6.6",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "eslint": "^8.6.0"
