--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "axios": "^0.25.0",
     "cheerio": "^1.0.0-rc.10",
     "cron": "^1.8.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^12.0.3",
-    "got": "^12.0.1",
-    "node-fetch": "^2.6.6",
-    "request-promise": "^4.2.6"
+    "dotenv": "^12.0.3"
   },
   "devDependencies": {
     "eslint": "^8.6.0"
